# sovereign-prospectus-corpus

./: .env.example  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  CLAUDE.md  Claude.md  DELIVERY_SUMMARY.txt  EXECUTION_PLAN.md  INDEX.md  LICENSE  LOG.md  Makefile  OVERNIGHT-LAUNCH.md  README.md  RESEARCH_CONTEXT.md  RESEARCH_DELIVERY_SUMMARY.md  SESSION-HANDOFF.md  START_HERE.md  ZAMBIA_PROCESSING_REPORT.md  appendix-sovtech.html  appendix-technical.html  call-to-action.html  chapter1.html  chapter2.html  chapter3.html  config.toml  eval-workflow.html  findings.html  index.html  pyproject.toml  requirements.txt  search.json
.claude/: settings.json
demo/: _quarto.yml  appendix-coverage.qmd  appendix-sovtech.qmd  appendix-technical.qmd  appendix-validation.qmd  call-to-action.qmd  chapter1.qmd  chapter2.qmd  chapter3.qmd  eval-workflow.qmd  findings.qmd  index.qmd  references.bib
docs/: ARCHITECTURE.md  DOMAIN.md  GOVERNANCE.md  OVERNIGHT-PARSE-RUNBOOK.md  PDIP_RECONNAISSANCE_SUMMARY.md  RATIFIED-DECISIONS.md  README.md  README_PDIP_EXTRACTION.md  ai_classification_framework.md  claude-code-as-extractor.md  docling-reparse-runbook.md  lawyer-centered-design.md  mac-mini-handoff-2026-03-29.md  mac-mini-handoff-2026-04-11.md  meta-learning-round-0.md  multi-machine-workflow-prompt.md  multi-model-code-review.md  nsm_api_reference.md  pdip_data_extraction_assessment.md  pdip_extraction_script_template.py  pipeline_architecture.md  presentation_outline.md  proof_of_concept_strategy.md  research_summary.md  round-1-review.md  senegal_west_africa_research.md  venue_assessment_and_architecture.md
explorer/: app.py  country_metadata.py  display.py  highlight.py  issuer_country_map.py  queries.py  requirements.txt
planning/: MVP-EXECUTION-PLAN.md  SPRINT-2026-04-SPRING-MEETINGS.md
scripts/: README.md  backfill_provenance_urls.py  chain_overnight.sh  clause_extraction_templates.py  clause_extractor.py  dedup_extractions.py  docling_reparse.py  docling_reparse_edgar.py  edgar_bulk_download.py  generate_splits.py  init_db.py  nsm_bulk_download.py  nsm_downloader.py  parse_status.sh  parse_watchdog.sh  pdip_scraper.py  pre_commit_private_check.py  promote_parsed_dir.py  regenerate_pdip_manifest.py  round_report.py  screenshot_book.py  validate_parse_output.py  verify_parse_environment.py
shiny/: app.py  requirements.txt
sql/: 001_corpus.sql  002_sovereign_issuers.sql
tests/: conftest.py  test_backfill_provenance_urls.py  test_clause_patterns.py  test_cli.py  test_cue_families.py  test_display.py  (+39 more)
(+136 files in other folders)
