[project]
name = "sovereign-prospectus-corpus"
version = "0.2.0"
description = "AI-enabled pipeline to download, process, and analyze sovereign bond prospectuses at scale"
requires-python = ">=3.12"
authors = [
    { name = "Teal Emery", email = "lte@tealinsights.com" },
]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sovereign_corpus"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
